<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.liminal.eagamification.nav_menu_ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.liminal.eagamification.nav_menu_ui.feedback.MapsFragment"
        android:label="@string/feedback" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.liminal.eagamification.nav_menu_ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.liminal.eagamification.nav_menu_ui.about_us.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />

</navigation>